<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>nebula</groupId>
	<artifactId>nebula-jdbc</artifactId>
	<version>${nebula.version}</version>
	<name>nebula-jdbc</name>
	<description>jdbc</description>

	<properties>
		<!-- Startup class -->
		<jacoco.version>0.8.6</jacoco.version>
		<junit.version>4.13.1</junit.version>
		<nebula.version>1.1.0</nebula.version>
		<tinyasm.version>0.3.4</tinyasm.version>
		<slf4j.version>1.7.25</slf4j.version>
		<mockito.version>1.10.19</mockito.version>
		<log4j.version>2.14.0</log4j.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.test.skip>false</maven.test.skip>
		<compiler.compilerArgument>-parameters </compiler.compilerArgument>
	</properties>

	<dependencies>
		<dependency>
			<groupId>nebula</groupId>
			<artifactId>nebula-commons</artifactId>
			<version>${nebula.version}</version>
		</dependency>
		<dependency>
			<groupId>nebula</groupId>
			<artifactId>nebula-lang</artifactId>
			<version>${nebula.version}</version>
		</dependency>
		<dependency>
		    <groupId>cn.sj1</groupId>
		    <artifactId>tinyasm-core</artifactId>
		    <version>0.3.4.1</version>
		</dependency>
<!-- 		<dependency>
			<groupId>com.github.sj1-cn</groupId>
			<artifactId>tinyasm-core</artifactId>
			<version>${tinyasm.version}</version>
		</dependency> -->
		<!-- LOG -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
		
		<!-- test -->
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.sj1-cn</groupId>
			<artifactId>tinyasm-tool</artifactId>
			<version>${tinyasm.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- DB -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.1.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.197</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<skipMain>false</skipMain>
					<skip>false</skip>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>8</source>
					<target>8</target>
					<compilerArgument>${compiler.compilerArgument}</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution data. -->

							<dataFile>target/jacoco.exec</dataFile>
							<!-- Sets the output directory for the code coverage report. -->
							<outputDirectory>target/jacoco-ut</outputDirectory>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<systemPropertyVariables>
						<jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
					</systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>deploy</id>
			<properties>
				<compiler.compilerArgument>-g:none</compiler.compilerArgument>
			</properties>
		</profile>
	</profiles>

</project>